# test

./: .gitignore  README.md  main.py  main_test.py  pyproject.toml  test_main.py
.github/workflows/: build.yml  ci.yml  python-tests.yml  release.yml
src/test_prime/: __init__.py  main.py
